Thu Feb 27 16:04:45 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (module-defined?): New function.
	(macroexpand-1, macroexpand): Use local-ref instead of defined?
 	and eval.
	* r4rs.scm (%load-verbosely): Use "module-defined?" instead of
 	"defined?".
	* slib.scm (defined?): New function to take the place of the
 	builtin "defined?".  It allways examines the slib module.

Mon Feb 24 21:46:15 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* configure.in: Added AM_MAINTAINER_MODE

Sat Feb 15 04:51:20 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (read-sharp): define directly, don't go through a
	%read-sharp layer.

Tue Feb 11 08:45:48 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (uniform-vector-set!): use uniform-array-set1!, not
	uniform-vector-set1! which doesn't exist.

Mon Feb 10 03:01:48 1997  Mikael Djurfeldt  <mdj@kenneth>

	* boot-9.scm (backtrace): Removed.  (A C version now exists in
	backtrace.c.)

Fri Jan 24 06:05:36 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (read-line!, read-delimited!, read-delimited,
	read-line): new	procedures, see libguile/ChangeLog.

Thu Jan 16 17:07:03 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	Added dynamic linking of modules. See libguile/DYNAMIC-LINKING.

	* boot-9.scm (split-c-module-name, convert-c-registered-modules,
 	init-dynamic-module, dynamic-maybe-call,
 	find-and-link-dynamic-module, link-dynamic-module,
 	try-module-dynamic-link, registered-modules): New definitions for
 	dynamic linking of modules.
	(resolve-module): Try to dynamically link the requested module
 	after failing to load it as Scheme code.

Wed Jan  8 05:50:14 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (getservbyport, getservbyname): remove stray %.

Tue Jan  7 20:02:24 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* boot-9.scm (and=>): Rename THUNK argument to PROCEDURE, 'cos
	that's what it is.

	* lineio.scm (make-line-buffering-input-port): Properly test for